--- a/index.html
+++ b/index.html
@@ -25,9 +25,84 @@
         <section>
 
         </section>
-        <footer>
-            
-        </footer>
+    <footer>
+        <div class="card-group">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Descubrir</h5>
+                <p class="card-text">
+                    <ul>Mac</ul>
+                    <ul>iPad</ul>
+                    <ul>Watch</ul>
+                    <ul>TV</ul>
+                    <ul>Music</ul>
+                    <ul>Airpods</ul>
+                    <ul>iPod touch</ul>
+                </p>
+                <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Servicios</h5>
+                <p class="card-text">
+                    <ul>Apple Music</ul>
+                    <ul>Apple TV+</ul>
+                    <ul>Apple Arcade</ul>
+                    <ul>iCloud</ul>
+                    <ul>Apple One</ul>
+                    <ul>Apple Books</ul>
+                </p>
+                <h5 class="card-title">Cuenta</h5>
+                <p class="card-text">
+                    <ul>Administrar tu Apple ID</ul>
+                    <ul>iCloud.com</ul>
+                </p>
+                <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Para la empresa</h5>
+                <p class="card-text">
+                    <ul>Apple y la empresa</ul>
+                </p>
+                <h5 class="card-title">Para la educación</h5>
+                <p class="card-text">
+                    <ul>Apple y la educación</ul>
+                    <ul>Comprar para la educación básica y media</ul>
+                </p>
+                <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+              </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Valores de Apple</h5>
+                  <p class="card-text">
+                    <ul>Accesibilidad</ul>
+                    <ul>Medio ambiente</ul>
+                    <ul>Privacidad</ul>
+                  </p>
+                  <h5 class="card-title">Acerca de Apple</h5>
+                  <p class="card-text">
+                    <ul>Newsroom</ul>
+                    <ul>Directivos de Apple</ul>
+                    <ul>Oportunidades de empleo</ul>
+                    <ul>Inversionistas</ul>
+                    <ul>Eventos</ul>
+                  </p>
+                  <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+                </div>
+              </div>
+          </div>
+        <p>
+            <a href="#">Busca un distribuidor</a> cerca de ti.
+        </p>
+        <p>
+            Copyright &copy; 2020 Apple Inc. Todos los derechos reservados. Política de privacidad | Aviso legal | Mapa del sitio Colombia
+        </p>
+
+    </footer>
     </div>
 </body>
 </html>
